# proyecto-si784-2026-i-u3-ANALIZADOR_SECRETOS

./: .dockerignore  .gitignore  Dockerfile  README.md  Video2.md  build_exe.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  run_web.py  serve_docs.py  sonar-project.properties
.github/workflows/: ci.yml  plantuml.yml  publish.yml
docs/: FD-03-ESPECIFICACION-DISEÑO-SISTEMA.md  FD01-Informe-Factibilidad.md  FD02-Informe-Vision.md  FD03-EPIS-Informe Especificación Requerimientos_final.docx  FD04-FINAL-INFORME-SOFTWARE.docx  FD04-Informe-Arquitectura.md  FD05-Informe-Proyecto-Final.md  FD06-Propuesta-Proyecto.md  MCP_SKILL_INTEGRATION.md
docs/diagrams/: diagram_1.puml  diagram_10.puml  diagram_11.puml  diagram_12.puml  diagram_13.puml  diagram_14.puml  diagram_15.puml  diagram_16.puml  diagram_17.puml  diagram_18.puml  diagram_2.puml  diagram_3.puml  diagram_4.puml  diagram_5.puml  diagram_6.puml  diagram_7.puml  diagram_8.puml  diagram_9.puml
docs/media/: actividad_procesos.puml  actores.puml  base_datos.puml  casos_de_uso.puml  clases_sistema.puml  colaboracion.puml  componentes.puml  despliegue_fisico.puml  directorio_monorepo.puml  modelo_logico.puml  objeto_finding.puml  organigrama.puml  proceso_actual.puml  proceso_propuesto.puml  roadmap_gantt.puml  secuencia_escaneo.puml  secuencia_escaneo_web.puml  subsis_paquetes.puml
docs/viewer/: index.html  style.css
scanner/: file_scanner.py  reporter.py
src/secret_scanner/: main.py  mcp_server.py
src/secret_scanner/scanner/: file_scanner.py  patterns.py  reporter.py
src/secret_scanner/web/: app.py
src/secret_scanner/web/static/: app.js  index.html  styles.css
tests/: test_file_scanner.py  test_patterns.py  test_reporter.py  test_web_api.py
vscode-extension/: README.md  package-lock.json  package.json  secret-scanner-cl-1.0.0.vsix  secret-scanner-cl-1.0.2.vsix  secret-scanner-pr-1.0.4.vsix  secret-scanner-pro-1.0.3.vsix  secret-scanner-vscode-1.0.0.vsix
vscode-extension/src/: extension.ts
