[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secret-scanner"
version = "1.0.0"
description = "CLI tool that detects hardcoded secrets and credentials in source code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
secret-scanner = "main:main"

# ── pytest + coverage ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=scanner",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["scanner"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
